<resources>
    <string name="app_name">ACalculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculator">Calculadora</string>
    <string name="history">Histórico</string>
    <string name="other">Outros</string>
    <string name="sign_out">Sair</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="hint_email">Email</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="hint_password">Password</string>
    <string name="test_submit">Submeter</string>
    <string name="create_user">Ainda não tem uma conta? Crie uma</string>
    <string name="test_login">LogIn</string>
    <string name="hint_name">Nome</string>
    <string name="test_cancel">Cancelar</string>
    <string name="map">Mapa</string>
</resources>