<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    tools:context=".activities.register.RegisterActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@drawable/calc_icon"
        android:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        app:startIconDrawable="@drawable/ic_name"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:drawablePadding="8dp"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        app:startIconDrawable="@drawable/ic_email"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        app:startIconDrawable="@drawable/ic_password"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingTop="10dp"
            android:drawablePadding="8dp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button_submit"
        app:icon="@drawable/ic_save"
        app:iconGravity="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue3"
        android:textColor="@color/white"
        android:tag="submit"
        android:text="@string/test_submit"/>
    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/button_cancel"
        app:icon="@drawable/ic_cancel"
        app:iconGravity="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white1"
        android:textColor="@color/blue3"
        android:tag="cancel"
        android:text="@string/test_cancel"/>

</LinearLayout>